fix(frontend): fixed not showing the media

--- a/frontend/src/app/componenti/generazione-automatica/generazione-automatica.component.css
+++ b/frontend/src/app/componenti/generazione-automatica/generazione-automatica.component.css
@@ -1,21 +1,22 @@
 .container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
+    position: center;
+    margin-top:20%;
+    margin-left: 50%;
     transform: translate(-50%, -50%);
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 90%;
+    height: fit-content;
     justify-content: center;
   }
-
 
   .mat-card-title{
     font-size: medium;
   }
 
   .stepper-container {
+    height:50%;
     margin-right: 20px;
     width: 80%;
   }
